--- a/clash.yml
+++ b/clash.yml
@@ -118,6 +118,79 @@ proxy-groups:
       - 🔰 选择节点
       - DIRECT
 rules:
+ - DOMAIN-SUFFIX,nhentai.net,✈️国外站点
+ - DOMAIN-SUFFIX,篤學好古.jyaaa.life,✈️国外站点
+ - DOMAIN-SUFFIX,e-hentai.org,✈️国外站点
+ - DOMAIN-SUFFIX,roum20.xyz,✈️国外站点
+ - DOMAIN-SUFFIX,cartoon18.com,✈️国外站点
+ - DOMAIN-SUFFIX,jcomic.net,✈️国外站点
+ - DOMAIN-SUFFIX,hanmanmianfei.net,✈️国外站点
+ - DOMAIN-SUFFIX,houhuayuan.pro,✈️国外站点
+ - DOMAIN-SUFFIX,hotupub.net,✈️国外站点
+ - DOMAIN-SUFFIX,rrread.xyz,✈️国外站点
+ - DOMAIN-SUFFIX,sis.la,✈️国外站点
+ - DOMAIN-SUFFIX,xbookcn.net,✈️国外站点
+ - DOMAIN-SUFFIX,cool18.com,✈️国外站点
+ - DOMAIN-SUFFIX,book18.org,✈️国外站点
+ - DOMAIN-SUFFIX,alhs.xyz,✈️国外站点
+ - DOMAIN-SUFFIX,kangaoqing.com,✈️国外站点
+ - DOMAIN-SUFFIX,4efu.com,✈️国外站点
+ - DOMAIN-SUFFIX,wallhaven.cc,✈️国外站点
+ - DOMAIN-SUFFIX,kemono.party,✈️国外站点
+ - DOMAIN-SUFFIX,zerochan.net,✈️国外站点
+ - DOMAIN-SUFFIX,qinimg.com,✈️国外站点
+ - DOMAIN-SUFFIX,buondua.com,✈️国外站点
+ - DOMAIN-SUFFIX,taotu.org,✈️国外站点
+ - DOMAIN-SUFFIX,4kup.net,✈️国外站点
+ - DOMAIN-SUFFIX,asianude4u.net,✈️国外站点
+ - DOMAIN-SUFFIX,pixiv.net,✈️国外站点
+ - DOMAIN-SUFFIX,ai19.art,✈️国外站点
+ - DOMAIN-SUFFIX,asiantolick.com,✈️国外站点
+ - DOMAIN-SUFFIX,youwu.lol,✈️国外站点
+ - DOMAIN-SUFFIX,hotgirl.asia,✈️国外站点
+ - DOMAIN-SUFFIX,jrants.com,✈️国外站点
+ - DOMAIN-SUFFIX,photos18.com,✈️国外站点
+ - DOMAIN-SUFFIX,hitxhot.com,✈️国外站点
+ - DOMAIN-SUFFIX,hitxhot.org,✈️国外站点
+ - DOMAIN-SUFFIX,jjgirls.com,✈️国外站点
+ - DOMAIN-SUFFIX,4khd.com,✈️国外站点
+ - DOMAIN-SUFFIX,pornpics.com,✈️国外站点
+ - DOMAIN-SUFFIX,metarthunter.com,✈️国外站点
+ - DOMAIN-SUFFIX,elitebabes.com,✈️国外站点
+ - DOMAIN-SUFFIX,hentaiasmr.moe,✈️国外站点
+ - DOMAIN-SUFFIX,asmrhub.site,✈️国外站点
+ - DOMAIN-SUFFIX,wffra.com,✈️国外站点
+ - DOMAIN-SUFFIX,cloudfront.net,✈️国外站点
+ - DOMAIN-SUFFIX,liidee.com,✈️国外站点
+ - DOMAIN-SUFFIX,2024api2.top,✈️国外站点
+ - DOMAIN-SUFFIX,sehuatang.org,✈️国外站点
+ - DOMAIN-SUFFIX,91jinman.com,✈️国外站点
+ - DOMAIN-SUFFIX,91shukan.com,✈️国外站点
+ - DOMAIN-SUFFIX,91tulu.com,✈️国外站点
+ - DOMAIN-SUFFIX,k55.net,✈️国外站点
+ - DOMAIN-SUFFIX,yazhouse8.com,✈️国外站点
+ - DOMAIN-SUFFIX,woxav.com,✈️国外站点
+ - DOMAIN-SUFFIX,hjy6.top,✈️国外站点
+ - DOMAIN-SUFFIX,youporn.com,✈️国外站点
+ - DOMAIN-SUFFIX,youjizz.com,✈️国外站点
+ - DOMAIN-SUFFIX,taiav.com,✈️国外站点
+ - DOMAIN-SUFFIX,theav.xyz,✈️国外站点
+ - DOMAIN-SUFFIX,xojav.tv,✈️国外站点
+ - DOMAIN-SUFFIX,799.su,✈️国外站点
+ - DOMAIN-SUFFIX,guatl.shop,✈️国外站点
+ - DOMAIN-SUFFIX,ptt.sex,✈️国外站点
+ - DOMAIN-SUFFIX,xfuliji.com,✈️国外站点
+ - DOMAIN-SUFFIX,guazishequ.vip,✈️国外站点
+ - DOMAIN-SUFFIX,uaa202410.com,✈️国外站点
+ - DOMAIN-SUFFIX,uaa.com,✈️国外站点
+ - DOMAIN-SUFFIX,haijiaolove.xyz,✈️国外站点
+ - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,hanime1.me,⚓国外站点非日本IP
+ - DOMAIN-SUFFIX,18comic.vip,⚓国外站点非日本IP
  - DOMAIN,app.biliapi.net,🌏 爱奇艺&哔哩哔哩
  - DOMAIN,grpc.biliapi.net,🌏 爱奇艺&哔哩哔哩
  - DOMAIN,p-bstarstatic.akamaized.net,🌏 爱奇艺&哔哩哔哩
@@ -3861,7 +3934,6 @@ rules:
  - DOMAIN-SUFFIX,jiruan.net,🔰 选择节点
  - DOMAIN-SUFFIX,jitouch.com,🔰 选择节点
  - DOMAIN-SUFFIX,jizzthis.com,🔰 选择节点
- - DOMAIN-SUFFIX,jjgirls.com,🔰 选择节点
  - DOMAIN-SUFFIX,jkb.cc,🔰 选择节点
  - DOMAIN-SUFFIX,jkforum.net,🔰 选择节点
  - DOMAIN-SUFFIX,jkub.com,🔰 选择节点
@@ -4278,7 +4350,6 @@ rules:
  - DOMAIN-SUFFIX,metacafe.com,🔰 选择节点
  - DOMAIN-SUFFIX,metafilter.com,🔰 选择节点
  - DOMAIN-SUFFIX,metart.com,🔰 选择节点
- - DOMAIN-SUFFIX,metarthunter.com,🔰 选择节点
  - DOMAIN-SUFFIX,meteorshowersonline.com,🔰 选择节点
  - DOMAIN-SUFFIX,metro.taipei,🔰 选择节点
  - DOMAIN-SUFFIX,metrohk.com.hk,🔰 选择节点
@@ -6867,12 +6938,10 @@ rules:
  - DOMAIN-SUFFIX,you-get.org,🔰 选择节点
  - DOMAIN-SUFFIX,you.com,🔰 选择节点
  - DOMAIN-SUFFIX,youdontcare.com,🔰 选择节点
- - DOMAIN-SUFFIX,youjizz.com,🔰 选择节点
  - DOMAIN-SUFFIX,youmaker.com,🔰 选择节点
  - DOMAIN-SUFFIX,youngpornvideos.com,🔰 选择节点
  - DOMAIN-SUFFIX,youngspiration.hk,🔰 选择节点
  - DOMAIN-SUFFIX,youpai.org,🔰 选择节点
- - DOMAIN-SUFFIX,youporn.com,🔰 选择节点
  - DOMAIN-SUFFIX,youporngay.com,🔰 选择节点
  - DOMAIN-SUFFIX,your-freedom.net,🔰 选择节点
  - DOMAIN-SUFFIX,yourepeat.com,🔰 选择节点
@@ -7165,7 +7234,6 @@ rules:
  - DOMAIN-SUFFIX,xvideos-cdn.com,🔰 选择节点
  - DOMAIN-SUFFIX,xvideos.com,🔰 选择节点
  - DOMAIN-SUFFIX,ypncdn.com,🔰 选择节点
- - DOMAIN-SUFFIX,pixiv.net,🔰 选择节点
  - DOMAIN-SUFFIX,pximg.net,🔰 选择节点
  - DOMAIN-SUFFIX,fanbox.cc,🔰 选择节点
  - DOMAIN-SUFFIX,amplitude.com,🔰 选择节点
@@ -8005,6 +8073,7 @@ rules:
  - DOMAIN-SUFFIX,cn-southwest-2.myhuaweicloud.com,🇨🇳 国内网站
  - DOMAIN-SUFFIX,caouu01.xyz,🇨🇳 国内网站
  - DOMAIN-SUFFIX,qmp4.com,🇨🇳 国内网站
+ - DOMAIN-SUFFIX,4kwang36.buzz,🇨🇳 国内网站
  - DOMAIN-SUFFIX,cloudflare-dns.com,🌩️ Cloudflare
  - DOMAIN-SUFFIX,cloudflare-ipfs.com,🌩️ Cloudflare
  - DOMAIN-SUFFIX,cloudflare-quic.com,🌩️ Cloudflare
@@ -9642,79 +9711,6 @@ rules:
  - DOMAIN-SUFFIX,up.qingdaonews.com,🛑 拦截广告
  - DOMAIN-SUFFIX,vaserviece.10jqka.com.cn,🛑 拦截广告
  - DOMAIN-SUFFIX,local,DIRECT
- - DOMAIN-SUFFIX,nhentai.net,✈️国外站点
- - DOMAIN-SUFFIX,篤學好古.jyaaa.life,✈️国外站点
- - DOMAIN-SUFFIX,e-hentai.org,✈️国外站点
- - DOMAIN-SUFFIX,roum20.xyz,✈️国外站点
- - DOMAIN-SUFFIX,cartoon18.com,✈️国外站点
- - DOMAIN-SUFFIX,jcomic.net,✈️国外站点
- - DOMAIN-SUFFIX,hanmanmianfei.net,✈️国外站点
- - DOMAIN-SUFFIX,houhuayuan.pro,✈️国外站点
- - DOMAIN-SUFFIX,hotupub.net,✈️国外站点
- - DOMAIN-SUFFIX,rrread.xyz,✈️国外站点
- - DOMAIN-SUFFIX,sis.la,✈️国外站点
- - DOMAIN-SUFFIX,xbookcn.net,✈️国外站点
- - DOMAIN-SUFFIX,cool18.com,✈️国外站点
- - DOMAIN-SUFFIX,book18.org,✈️国外站点
- - DOMAIN-SUFFIX,alhs.xyz,✈️国外站点
- - DOMAIN-SUFFIX,kangaoqing.com,✈️国外站点
- - DOMAIN-SUFFIX,4efu.com,✈️国外站点
- - DOMAIN-SUFFIX,wallhaven.cc,✈️国外站点
- - DOMAIN-SUFFIX,kemono.party,✈️国外站点
- - DOMAIN-SUFFIX,zerochan.net,✈️国外站点
- - DOMAIN-SUFFIX,qinimg.com,✈️国外站点
- - DOMAIN-SUFFIX,buondua.com,✈️国外站点
- - DOMAIN-SUFFIX,taotu.org,✈️国外站点
- - DOMAIN-SUFFIX,4kup.net,✈️国外站点
- - DOMAIN-SUFFIX,asianude4u.net,✈️国外站点
- - DOMAIN-SUFFIX,pixiv.net,✈️国外站点
- - DOMAIN-SUFFIX,ai19.art,✈️国外站点
- - DOMAIN-SUFFIX,asiantolick.com,✈️国外站点
- - DOMAIN-SUFFIX,youwu.lol,✈️国外站点
- - DOMAIN-SUFFIX,hotgirl.asia,✈️国外站点
- - DOMAIN-SUFFIX,jrants.com,✈️国外站点
- - DOMAIN-SUFFIX,photos18.com,✈️国外站点
- - DOMAIN-SUFFIX,hitxhot.com,✈️国外站点
- - DOMAIN-SUFFIX,jjgirls.com,✈️国外站点
- - DOMAIN-SUFFIX,4khd.com,✈️国外站点
- - DOMAIN-SUFFIX,pornpics.com,✈️国外站点
- - DOMAIN-SUFFIX,metarthunter.com,✈️国外站点
- - DOMAIN-SUFFIX,elitebabes.com,✈️国外站点
- - DOMAIN-SUFFIX,hentaiasmr.moe,✈️国外站点
- - DOMAIN-SUFFIX,asmrhub.site,✈️国外站点
- - DOMAIN-SUFFIX,wffra.com,✈️国外站点
- - DOMAIN-SUFFIX,cloudfront.net,✈️国外站点
- - DOMAIN-SUFFIX,liidee.com,✈️国外站点
- - DOMAIN-SUFFIX,2024api2.top,✈️国外站点
- - DOMAIN-SUFFIX,sehuatang.org,✈️国外站点
- - DOMAIN-SUFFIX,91jinman.com,✈️国外站点
- - DOMAIN-SUFFIX,91shukan.com,✈️国外站点
- - DOMAIN-SUFFIX,91tulu.com,✈️国外站点
- - DOMAIN-SUFFIX,k55.net,✈️国外站点
- - DOMAIN-SUFFIX,yazhouse8.com,✈️国外站点
- - DOMAIN-SUFFIX,woxav.com,✈️国外站点
- - DOMAIN-SUFFIX,4kwang36.buzz,✈️国外站点
- - DOMAIN-SUFFIX,hjy6.top,✈️国外站点
- - DOMAIN-SUFFIX,youporn.com,✈️国外站点
- - DOMAIN-SUFFIX,youjizz.com,✈️国外站点
- - DOMAIN-SUFFIX,taiav.com,✈️国外站点
- - DOMAIN-SUFFIX,theav.xyz,✈️国外站点
- - DOMAIN-SUFFIX,xojav.tv,✈️国外站点
- - DOMAIN-SUFFIX,799.su,✈️国外站点
- - DOMAIN-SUFFIX,guatl.shop,✈️国外站点
- - DOMAIN-SUFFIX,ptt.sex,✈️国外站点
- - DOMAIN-SUFFIX,xfuliji.com,✈️国外站点
- - DOMAIN-SUFFIX,guazishequ.vip,✈️国外站点
- - DOMAIN-SUFFIX,uaa202410.com,✈️国外站点
- - DOMAIN-SUFFIX,uaa.com,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
- - DOMAIN-SUFFIX,hanime1.me,⚓国外站点非日本IP
- - DOMAIN-SUFFIX,18comic.vip,⚓国外站点非日本IP
  - IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
  - IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
  - IP-CIDR,172.16.0.0/12,DIRECT,no-resolve
