--- a/clash.yml
+++ b/clash.yml
@@ -184,7 +184,7 @@ rules:
  - DOMAIN-SUFFIX,uaa202410.com,✈️国外站点
  - DOMAIN-SUFFIX,uaa.com,✈️国外站点
  - DOMAIN-SUFFIX,haijiaolove.xyz,✈️国外站点
- - DOMAIN-SUFFIX,111,✈️国外站点
+ - DOMAIN-SUFFIX,a-hadaka.jp,✈️国外站点
  - DOMAIN-SUFFIX,111,✈️国外站点
  - DOMAIN-SUFFIX,111,✈️国外站点
  - DOMAIN-SUFFIX,111,✈️国外站点
