--- a/clash.yml
+++ b/clash.yml
@@ -84,6 +84,10 @@ proxy-groups:
       - 🔰 选择节点
       - DIRECT
 rules:
+ - DOMAIN-SUFFIX,gh-proxy.com,🇨🇳 国内网站
+ - DOMAIN-SUFFIX,ghproxy.net,🇨🇳 国内网站
+ - DOMAIN-SUFFIX,ghproxy.com,🇨🇳 国内网站
+ - DOMAIN-SUFFIX,ghproxy.net,🇨🇳 国内网站
  - DOMAIN-SUFFIX,caouu01.xyz,🇨🇳 国内网站
  - DOMAIN-SUFFIX,qmp4.com,🇨🇳 国内网站
  - DOMAIN-SUFFIX,4kwang36.buzz,🇨🇳 国内网站
