--- a/clash.yml
+++ b/clash.yml
@@ -55,10 +55,10 @@ proxies:
   - {name: 移动4g专用01|805, server: 183.238.90.8, port: 41766, client-fingerprint: chrome, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
   - {name: 移动4g专用01|839, server: 183.238.90.8, port: 46920, client-fingerprint: chrome, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
   - {name: 移动4g专用03|102, server: 120.210.205.134, port: 47459, client-fingerprint: chrome, type: vmess, uuid: 83a424d8-4bcb-4cee-b016-2c8f1db4a921, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
-  - {name: 🇸🇬SG_1 @wangcai_8 3, server: 120.232.153.48, port: 50136, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55454045:RqsF7g, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_2 @wangcai_8 3, server: 120.232.153.48, port: 50137, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55454045:RqsF7g, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_3 @wangcai_8 3, server: 120.232.153.48, port: 50138, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55454045:RqsF7g, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_4 @wangcai_8 3, server: 120.232.153.48, port: 50139, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55454045:RqsF7g, obfs-param: TG.WangCai2, udp: true}
+  - {name: 🇸🇬SG_1 @wangcai_8 3, server: 120.232.153.46, port: 50136, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
+  - {name: 🇸🇬SG_2 @wangcai_8 3,  server: 120.232.153.46, port: 50137, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
+  - {name: 🇸🇬SG_3 @wangcai_8 3, server: 120.232.153.46, port: 50138, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
+  - {name: 🇸🇬SG_4 @wangcai_8 3, server: 120.232.153.46, port: 50139, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
 proxy-groups:
   # ============= 原有策略组（保持完全不变）=============
   - { name: "🔰 选择节点", type: select, proxies: [DIRECT, 免费-日本节点,移动4g专用,新加坡节点]}
