--- a/clash.yml
+++ b/clash.yml
@@ -55,16 +55,14 @@ proxies:
   - {name: 移动4g专用01|805, server: 183.238.90.8, port: 41766, client-fingerprint: chrome, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
   - {name: 移动4g专用01|839, server: 183.238.90.8, port: 46920, client-fingerprint: chrome, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
   - {name: 移动4g专用03|102, server: 120.210.205.134, port: 47459, client-fingerprint: chrome, type: vmess, uuid: 83a424d8-4bcb-4cee-b016-2c8f1db4a921, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
-  - {name: 🇸🇬SG_1 @wangcai_8 3, server: 120.232.153.46, port: 50136, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_2 @wangcai_8 3,  server: 120.232.153.46, port: 50137, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_3 @wangcai_8 3, server: 120.232.153.46, port: 50138, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
-  - {name: 🇸🇬SG_4 @wangcai_8 3, server: 120.232.153.46, port: 50139, type: ssr, cipher: chacha20, password: mPQ5C9, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: 55548456:B4UvU0, obfs-param: TG.WangCai2, udp: true}
+  - {name: 台湾2, server: zhee01.dynu.net, port: 15700, reality-opts: {public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY}, client-fingerprint: chrome, type: vless, uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45, tls: true, tfo: false, flow: xtls-rprx-vision, skip-cert-verify: false, servername: www.nvidia.com, network: tcp}
+  - {name: zyzzzoao, server: 45.131.5.145, port: 80, client-fingerprint: chrome, type: vless, uuid: c5293efa-28f8-4a0f-8f34-541078970cee, tls: false, tfo: false, skip-cert-verify: false, servername: gozargah.validbv7996.ir, network: ws, ws-opts: {path: /Telegram🇨🇳 @MxlShare@WangCai2, headers: {Host: gozargah.validbv7996.ir}}}
+  - {name: 新加坡10, server: beiyong.dynuddns.net, port: 29877, reality-opts: {public-key: qhTzYYIgBzDLNYR79oxftqdo1kzL-1_hGJKfqrOliCY}, client-fingerprint: chrome, type: vless, uuid: 459b4a80-bd61-4ecd-a26b-e9c1809d9e45, tls: true, tfo: false, flow: xtls-rprx-vision, skip-cert-verify: false, servername: www.nvidia.com, network: tcp}
 proxy-groups:
   # ============= 原有策略组（保持完全不变）=============
-  - { name: "🔰 选择节点", type: select, proxies: [DIRECT, 免费-日本节点,移动4g专用,新加坡节点]}
-  - { name: "✈️国外站点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204", proxies: [免费-日本节点,移动4g专用,新加坡节点] }
-  - { name: "⚓国外站点非日本IP", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [新加坡节点,移动4g专用] }
-  - { name: "新加坡节点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [🇸🇬SG_1 @wangcai_8 3,🇸🇬SG_2 @wangcai_8 3,🇸🇬SG_3 @wangcai_8 3,🇸🇬SG_4 @wangcai_8 3,] }
+  - { name: "🔰 选择节点", type: select, proxies: [DIRECT, 免费-日本节点,移动4g专用,⚓国外站点非日本IP]}
+  - { name: "✈️国外站点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204", proxies: [免费-日本节点,⚓国外站点非日本IP] }
+  - { name: "⚓国外站点非日本IP", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [移动4g专用,台湾2,zyzzzoao,新加坡10] }
   - { name: "移动4g专用", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [移动4g专用02|918,移动4g专用02|894,移动4g专用01|805,移动4g专用01|839,移动4g专用03|102] }
   - { name: "免费-日本节点", type: fallback, interval: 60, tolerance: 500,timeout: 3000, url: "http://www.gstatic.com/generate_204",proxies: [🇯🇵 免费-日本1-Ver.6, 🇯🇵 免费-日本2-Ver.7, 🇯🇵 免费-日本3-Ver.6, 🇯🇵 免费-日本4-Ver.7, 🇯🇵 免费-日本5-Ver.8, 🇯🇵 免费-日本6-Ver.7, 🇯🇵 免费-日本7-Ver.1] }
   - name: 🇨🇳 国内网站
